# Airplane-Notifier-Telegram

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-docker.yml  build.yml
src/: beast.rs  json_decoder.rs  main.rs
