[package]
name = "airplane-notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28", features = ["full"] }
dotenv = "0.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
haversine = "0.2"

# [target.armv8-unknown-linux-gnueabihf]
# linker = "aarch64-linux-gnu-gcc"
